# FantasyLife

./: README.md  code  code.c  code_O0  lab3.S  mini_csil.c
A8/: CMakeLists.txt  shell
A8/gtest/: shell_test.cpp
A8/include/: msgs.h  task0.h
A8/src/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  shell  shell_test  shell_test[1]_include.cmake  shell_test[1]_tests.cmake  task0.c
lab1/: QA  array_sum_speedX  script.sh
lab1/part1/: script.sh
lab1/part2/: script.sh
lab1/part2/USING_o3/: array_sum.c  script.sh
lab1/part3/: QA  multiply_add.S  script.sh
lab10/: answers.txt  lab10.S  lab10AS  script.sh  sin.c  sin_test  time03
lab11/: answers.txt  lab11.S  lab11_test  lab11_time  lab11_vc.cpp  script.sh
lab12/: answers.txt  lab12c.c  lab12c_unsafe  map_o3_unsafe  run_o0  run_o1  run_o2  run_o3  script.sh
lab2/: answers.txt  calculate.S  unknown.S
lab3/: copy  lab3.S  traceable  traceable.c
lab4/: cp  lab4.S  script.sh
lab5/: answers.txt  copy  h  lab5.S  lab5.h  others.c  script.sh  timing.c
lab7/: answers.txt  lab7  lab7.S  script.sh  test03  test_reg  timing  timing03  timing_reg
lab8/: answers.txt  array  array-2d.c  hail  hail_time  lab3.S  lab8.S  script.sh
lab9/: answers.txt  array-2d.c  cachegrind.out.24182  cachegrind.out.24213  cachegrind.out.24217  cachegrind.out.24218  cachegrind.out.24281  cachegrind.out.24322  script.sh  sort.cpp  test_o2  test_o3
